virtual tour edits css to fix wierd wrapping on reveals only on ipad versions

--- a/css/app.css
+++ b/css/app.css
@@ -1093,10 +1093,10 @@ ul.navlevel1 ul a:hover {
 .submenugeneric .submenu .dropsubmenutitle {
   text-transform: uppercase;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 700;
   color: #ffab00;
-  margin: 10px 10px 5px 15px; }
+  margin: .5rem; }
 
 @media screen and (max-width: 40em) {
   .submenugeneric {
